[package]
name = "css-macros"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
homepage = "https://github.com/Yummiii/css-macros"
repository = "https://github.com/Yummiii/css-macros"
description = "MAcros to work with css files with stylist"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.70"
syn = {features = ["full"], version = "2.0.39"}
quote = "1.0.33"
regex = "1.10.2"
